--- a/config/config.yaml
+++ b/config/config.yaml
@@ -111,11 +111,8 @@ platforms:
     name: "财联社热门"
   - id: "ifeng"
     name: "凤凰网"
-  - id: "tieba"
-    name: "贴吧"
-  - id: "weibo"
-    name: "微博"
-  - id: "douyin"
-    name: "抖音"
-  - id: "zhihu"
-    name: "知乎"
+  - id: "github"
+    name: "GitHub"
+  - id: "sspai"
+    name: "少数派"
+    
